5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1635_2704.log
== SUBMITION (2019-04-08 15:04:02) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao = " S "):
	mensagem = (n*10/100) + n
else:
    mensagem = " n "
print(mensagem)

-- EXECUTION TIME:
0.198915
-- ERROR:
  File "/home/codebench/codes/1635/2704/main.py", line 3
    if(opcao = " S "):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:04:20) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao = " S "):
	mensagem = (n*10/100) + n
else:
    mensagem = " n "
print(mensagem)

-- ERROR:
File "XXXX", line 3
    if(opcao = " S "):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:04:36) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao ==" S "):
	mensagem = (n*10/100) + n
else:
    mensagem = " n "
print(mensagem)

-- EXECUTION TIME:
0.155928
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
n
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
n
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
n
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:04:42) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
	mensagem = (n*10/100) + n
else:
    mensagem = " n "
print(mensagem)

-- OUTPUT:
n
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:05:13) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
	mensagem = (n*10/100) + n
else:
    mensagem = n
print(mensagem)

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:05:38) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
	mensagem = (n*10/100) + n
else:
    mensagem = n
print(mensagem)

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:06:12) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
	mensagem = (n*10/100) + n
else:
    mensagem = n
print(mensagem)

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:06:42) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
	mensagem = n + (n*10/100)
else:
    mensagem = n
print(mensagem)

-- EXECUTION TIME:
0.174602
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:07:20) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
   mensagem = n + (n*10/100)
else:
    mensagem = n
print(mensagem)

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:08:50) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
   mensagem = n + (n*10/100)
else:
    mensagem = n
print(mensagem)

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:09:09) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
   mensagem = (n + (n*10/100))
else:
    mensagem = n
print(mensagem)

-- EXECUTION TIME:
0.216783
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:09:21) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
   mensagem = (n + (n*10/100))
else:
    mensagem = N
print(mensagem)

-- EXECUTION TIME:
0.130372
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 6, in <module>
    mensagem = N
NameError: name 'N' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:11:02) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
   mensagem = n + (n*0.1)
else:
    mensagem = 
print(mensagem)

-- ERROR:
File "XXXX", line 6
    mensagem = 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:11:12) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
   mensagem = n + (n*0.1)
else:
    mensagem = n 
print(mensagem)

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:11:33) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
   mensagem = (n + (n*0.1))
else:
    mensagem = n 
print(mensagem)

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:12:19) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
   mensagem = (n + (n*0.1))
else:
    mensagem = n 
print(mensagem)

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:12:35) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
   mensagem = (n + (n*0.1))
else:
    mensagem = n 
print(mensagem)

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:13:01) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
   mensagem = (n + (n * 10/100 ))
else:
    mensagem = n 
print(mensagem)

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:13:10) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
   mensagem = (n + (n * 10/100 ))
else:
    mensagem = n 
print(mensagem)

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:13:17) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
   mensagem = (n + (n * 10/100 ))
else:
    mensagem = n 
print(mensagem)

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:13:25) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
   mensagem = (n + (n * 10/100 ))
else:
    mensagem = n 
print(mensagem)

-- EXECUTION TIME:
0.186846
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:18:50) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
   mensagem = n + (n * 10/100 )
else:
    mensagem = n 
print(mensagem)

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:40:49) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
   mensagem = n + (n * 10/100 )
else:
    mensagem = n 
print(mensagem)

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:41:17) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
   mensagem = (n * 10/100 )
else:
    mensagem = n 
print(mensagem)

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:41:48) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
   mensagem = " n + (n * 10/100 ) "
else:
    mensagem = " n " 
print(mensagem)

-- OUTPUT:
n
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:42:05) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == " S "):
   mensagem = " n + (n * 10/100 ) "
else:
    mensagem = n 
print(mensagem)

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:47:58) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == "S"):
   mensagem = " n + (n * 10/100 ) "
else:
    mensagem = n 
print(mensagem)

-- EXECUTION TIME:
0.152562
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
n + (n * 10/100 )
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
n + (n * 10/100 )
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:48:15) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input(" S / N ?")
if(opcao == "S"):
   mensagem = "n + (n * 10/100 )"
else:
    mensagem = n 
print(mensagem)

-- EXECUTION TIME:
0.127679
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
n + (n * 10/100 )
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
n + (n * 10/100 )
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:48:26) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input("S / N ?")
if(opcao == "S"):
   mensagem = "n + (n * 10/100 )"
else:
    mensagem = n 
print(mensagem)

-- EXECUTION TIME:
0.182253
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
n + (n * 10/100 )
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
n + (n * 10/100 )
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:48:49) 
-- CODE:
n = float(input(" Nota do aluno "))
opcao = input("S / N ?")
if(opcao == "S"):
   mensagem = n + (n * 10/100 )
else:
    mensagem = n 
print(mensagem)

-- EXECUTION TIME:
0.187056
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
